--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -13,3 +13,13 @@ body {
 ul {
   list-style-type: none;
 }
+
+.container {
+  width: 70%;
+  margin: 0 auto;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
